--- a/ayuep/app/src/main/res/layout/activity_store_dashboard.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_dashboard.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorDashboardBackgroud">
+    android:background="@color/colorDashboardBackgroud"
+    android:longClickable="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -10,63 +11,76 @@
         android:layout_marginTop="40dp"
         android:text="@string/app_name"
         android:textSize="40dp"
-        android:textColor="@color/colorTitle"/>
-    <RelativeLayout
+        android:textColor="@color/colorTitle"
+        android:id="@+id/textView" />
+
+    <LinearLayout
         android:id="@+id/first_group"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginTop="130dp">
         <Button
             android:id="@+id/store"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="35dp"
             android:text="店铺"
             android:textSize="35dp"
             android:background="#AA310f"
             android:textColor="@color/colorWhiteColor"
+            android:layout_weight="1"
             android:onClick="onClick"/>
         <Button
             android:id="@+id/products"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
+            android:layout_toRightOf="@+id/store"
+            android:layout_marginLeft="35dp"
+            android:layout_weight="1"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="35dp"
             android:text="套系"
             android:textSize="35dp"
             android:background="#4d3eef"
             android:textColor="@color/colorWhiteColor"
             android:onClick="onClick"/>
-    </RelativeLayout>
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/first_group">
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/first_group"
+        android:id="@+id/relativeLayout">
         <Button
             android:id="@+id/orders"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="35dp"
             android:textSize="35dp"
             android:text="订单"
             android:background="#078e18"
             android:textColor="@color/colorWhiteColor"
+            android:layout_weight="1"
             android:onClick="onClick"/>
 
         <Button
             android:id="@+id/back"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
+            android:layout_toRightOf="@+id/orders"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginLeft="35dp"
+            android:layout_weight="1"
             android:textSize="35dp"
             android:text="退出"
             android:background="#312d8e"
             android:textColor="@color/colorWhiteColor"
             android:onClick="onClick"/>
-    </RelativeLayout>
+    </LinearLayout>
+
+
 </RelativeLayout>
