--- a/ayuep/app/src/main/res/layout/activity_store_modify.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_modify.xml
@@ -113,6 +113,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:background="@color/colorWhiteColor"
+                android:onClick="selectProductType"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
@@ -125,10 +126,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginRight="16dp"
                     android:id="@+id/id_store_type"
-                    android:text="婚纱摄影"
+                    android:text=""
                     android:textSize="25dp"
                     android:gravity="right"
-                    />
+                    style="?android:attr/textViewStyle" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
