--- a/ayuep/app/src/main/res/layout/activity_store_products.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_products.xml
@@ -3,23 +3,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@+id/id_store_products_add">
-        <LinearLayout
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/id_list_view">
-                </ListView>
-        </LinearLayout>
-
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/id_store_products_add"
+            android:id="@+id/id_list_view">
+        </ListView>
     <Button
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
