--- a/ayuep/app/src/main/res/layout/grid_view.xml
+++ b/ayuep/app/src/main/res/layout/grid_view.xml
@@ -25,12 +25,12 @@
         </LinearLayout>
         <ImageButton
             android:id="@+id/delete_markView"
-            android:layout_width="20dip"
-            android:layout_height="20dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:layout_gravity="right|top"
-            android:visibility="gone"
             android:src="@drawable/delete"
+            android:background="@android:color/transparent"
             />
     </FrameLayout>
 </LinearLayout>
